Remove discussion section from analysis ipynb file

--- a/van-trees_book/notebooks/trees_analysis.ipynb
+++ b/van-trees_book/notebooks/trees_analysis.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "2a324d2c-28dd-4b81-9d94-5959299ad830",
+   "metadata": {},
+   "source": [
+    "# Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "874c7bc3",
    "metadata": {},
    "source": [
@@ -1773,7 +1781,8 @@
    "execution_count": 18,
    "id": "dcf26ecd",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "tags": []
    },
    "outputs": [
     {
