Add dataset and report references

--- a/van-trees_book/references.bib
+++ b/van-trees_book/references.bib
@@ -1,58 +1,118 @@
 ---
 ---
 
-@misc{ wiki:xxx,
-   author = "Wikimedia Commons",
-   title = "File:Concord Pacific Master Plan Area.jpg --- Wikimedia Commons{,} the free media repository",
-   year = "2021",
-   url = "https://commons.wikimedia.org/w/index.php?title=File:Concord_Pacific_Master_Plan_Area.jpg&oldid=611893232",
-   note = "[Online; accessed 12-December-2022]"
- }
-
-@misc{unknown-author-no-dateA,
-	author = {},
-	title = {{Aggregate Transforms — Altair 4.2.0 documentation}},
+@online{unknown-author-no-dateA,
+	language = {english},
+	title = {Aggregate Transforms — Altair 4.2.0 documentation},
 	url = {https://altair-viz.github.io/user_guide/transform/aggregate.html},
+	urldate = {2022-01-04},
 }
-@misc{unknown-author-no-dateB,
-	author = {},
-	title = {{Calculate Transform — Altair 4.2.0 documentation}},
+@online{unknown-author-no-dateB,
+	language = {english},
+	title = {Calculate Transform — Altair 4.2.0 documentation},
 	url = {https://altair-viz.github.io/user_guide/transform/calculate.html?highlight=transform%20calculate},
+	urldate = {2022-01-04},
 }
-@misc{unknown-author-no-dateC,
-	author = {},
-	title = {{Filter Transform — Altair 4.2.0 documentation}},
+@report{unknown-author-no-dateC,
+	language = {english},
+	location = {Vancouver, ca},
+	publisher = {},
+	title = {City of Vancouver and Vancouver Park Board. 2018. Urban Forest Strategy:2018 Update},
+	url = {https://vancouver.ca/files/cov/urban-forest-strategy.pdf},
+	urldate = {2021-12-20},
+}
+@report{unknown-author-2016,
+	date = {2016},
+	language = {english},
+	location = {Burnaby, ca},
+	publisher = {},
+	title = {Climate Projections for Metro Vancouver},
+	url = {http://www.metrovancouver.org/services/air-quality/AirQualityPublications/ClimateProjectionsForMetroVancouver.pdf},
+	urldate = {2021-12-20},
+}
+@image{gordon-2015,
+	date = {2015-06-16},
+	language = {english},
+	title = {Concord Pacific Master Plan Area},
+	url = {https://upload.wikimedia.org/wikipedia/commons/5/57/Concord_Pacific_Master_Plan_Area.jpg},
+}
+@online{unknown-author-no-dateD,
+	language = {english},
+	title = {Filter Transform — Altair 4.2.0 documentation},
 	url = {https://altair-viz.github.io/user_guide/transform/filter.html},
+	urldate = {2022-01-04},
 }
 @article{gomez-2021,
 	author = {given=Michelle, family=Gomez},
-	month = {10},
-	title = {{June heat wave was the deadliest weather event in Canadian history, experts say}},
-	year = {2021},
+	date = {2021-10-02},
+	language = {english},
+	title = {June heat wave was the deadliest weather event in Canadian history, experts say},
 	url = {https://www.cbc.ca/news/canada/british-columbia/ubcm-heat-dome-panel-1.6189061},
 }
-@misc{unknown-author-no-dateD,
-	author = {},
-	title = {{Join Aggregate Transform — Altair 4.2.0 documentation}},
+@online{unknown-author-no-dateE,
+	language = {english},
+	title = {Join Aggregate Transform — Altair 4.2.0 documentation},
 	url = {https://altair-viz.github.io/user_guide/transform/joinaggregate.html},
+	urldate = {2022-01-04},
+}
+@article{magarik-2020,
+	author = {given-i={Y. A.}, given={Yasha A.S.}, family=Magarik and given-i={L. A.}, given={Lara A.}, family=Roman and given-i={J. G.}, given={Jason G.}, family=Henning},
+	date = {2020-01},
+	doi = {10.1016/j.ufug.2019.126481},
+	journaltitle = {Urban Forestry &amp; Urban Greening},
+	language = {english},
+	pages = {126481},
+	publisher = {Elsevier BV},
+	title = {How should we measure the DBH of multi-stemmed urban trees?},
+	url = {http://dx.doi.org/10.1016/j.ufug.2019.126481},
+	volume = {47},
 }
 @article{mcpherson-1989,
 	author = {given={E. Gregory}, family=McPherson and given={Rowan A.}, family=Rowntree},
-	journal = {Landscape Journal},
+	date = {1989},
+	journaltitle = {Landscape Journal},
+	language = {english},
 	number = {1},
 	pages = {13--23},
-	title = {{Using Structural Measures to Compare: Twenty-Two U.S. Street Tree Populations}},
-	volume = {8},
-	year = {1989},
+	title = {Using Structural Measures to Compare: Twenty-Two U.S. Street Tree Populations},
 	url = {www.jstor.org/stable/43323997},
+	volume = {8},
 }
-@misc{unknown-author-no-dateE,
-	author = {},
-	title = {{USDA Forest Service}},
+@online{unknown-author-no-dateF,
+	language = {english},
+	title = {USDA Forest Service},
 	url = {https://www.nrs.fs.fed.us/fia/data-tools/state-reports/glossary/},
+	urldate = {2021-12-20},
 }
-@misc{vancouver-no-date,
+@dataset{vancouver-board-of-parks-and-recreation-2016,
+	author = {{Vancouver Board of Parks and Recreation}},
+	date = {2016},
+	language = {english},
+	publisher = {City of Vancouver Open Data Portal},
+	title = {Street Trees},
+	url = {https://opendata.vancouver.ca/explore/dataset/street-trees/information/?disjunctive.species_name&disjunctive.common_name&disjunctive.height_range_id},
+	version = {},
+}
+@online{vancouver-no-date,
 	author = {given-i=C.O., given={City Of}, family=Vancouver},
-	title = {{Areas of the city}},
+	language = {english},
+	title = {Areas of the city},
 	url = {https://vancouver.ca/news-calendar/areas-of-the-city.aspx},
+	urldate = {2021-12-20},
+}
+@dataset{unknown-author-2021A,
+	date = {2021-06-10},
+	language = {english},
+	publisher = {UBC-MDS},
+	title = {Vancouver GeoJSON},
+	url = {https://raw.githubusercontent.com/UBC-MDS/exploratory-data-viz/main/data/local-area-boundary.geojson},
+	version = {},
+}
+@dataset{unknown-author-2021B,
+	date = {2021-09-07},
+	language = {english},
+	publisher = {UBC-MDS},
+	title = {Vancouver Trees Subsetted Data},
+	url = {https://raw.githubusercontent.com/UBC-MDS/exploratory-data-viz/main/data/vancouver_trees.csv},
+	version = {},
 }
