Add section-label references to in-line citations

--- a/van-trees_book/notebooks/trees_analysis.ipynb
+++ b/van-trees_book/notebooks/trees_analysis.ipynb
@@ -375,7 +375,7 @@
     "Tree ID 93845, Deodar Cedar, *Kitsilano*\n",
     "```\n",
     "\n",
-    "This is a multi-stemmed tree with an overall diameter of 71 inches, the three individual stems each having a smaller diameter. In a study examining methods of multi-stemmed tree measurement, Magarik et al found that there was no significant difference in the predictive power of overall diameter in regards to tree height and crown width of multi-stemmed trees (Magarik et al 2020). For this reason, we can feel justified in keeping these trees as part of the dataset.\n",
+    "This is a multi-stemmed tree with an overall diameter of 71 inches, the three individual stems each having a smaller diameter. In a study examining methods of multi-stemmed tree measurement, Magarik et al found that there was no significant difference in the predictive power of overall diameter in regards to tree height and crown width of multi-stemmed trees [](magarik-2020). For this reason, we can feel justified in keeping these trees as part of the dataset.\n",
     "\n",
     "Of the outliers present in {numref}`diameter_outliers_layered` , tree IDs 87265, 168648, 142102, 142079 and 126267 can be kept as part of the data set as their listed diameters are reasonable based on visualization through Google Maps. The remaining outlier trees can be removed from the analysis.\n",
     "\n",
